After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756688 - "nautilus ." doesn't open current directory but ~/
"nautilus ." doesn't open current directory but ~/
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 757179 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-10-16 11:33 UTC by Bastien Nocera
Modified: 2015-10-31 10:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: specify cwd (2.82 KB, patch)
2015-10-16 15:27 UTC, Carlos Soriano
committed Details | Review

Description Bastien Nocera 2015-10-16 11:33:15 UTC
In GNOME 3.16 (and for many years before that), I would be able to browse the current directory in nautilus by running:
nautilus .

This doesn't work any more (it opens the home directory instead) but this works:
nautilus `pwd`

This is a regression from GNOME 3.16 (probably going back pretty far into GNOME 2).
Comment 1 Carlos Soriano 2015-10-16 11:43:56 UTC
(In reply to Bastien Nocera from comment #0)
> In GNOME 3.16 (and for many years before that), I would be able to browse
> the current directory in nautilus by running:
> nautilus .

Works for me. Can you try killing all instances first?

> 
> This is a regression from GNOME 3.16 (probably going back pretty far into
> GNOME 2).

I don't understand what "going pretty far into GNOME 2" means here.
Comment 2 Bastien Nocera 2015-10-16 11:48:49 UTC
(In reply to Carlos Soriano from comment #1)
> (In reply to Bastien Nocera from comment #0)
> > In GNOME 3.16 (and for many years before that), I would be able to browse
> > the current directory in nautilus by running:
> > nautilus .
> 
> Works for me. Can you try killing all instances first?

It only works for the first call, after that, it only activates the existing window.

> > This is a regression from GNOME 3.16 (probably going back pretty far into
> > GNOME 2).
> 
> I don't understand what "going pretty far into GNOME 2" means here.

That it was working for a looooong time :)
Comment 3 Carlos Soriano 2015-10-16 15:27:29 UTC
Created attachment 313473 [details] [review]
application: specify cwd

We are managing all command line options in the main instance.
That works always correctly except when resolving relative paths,
which are relative the local instance, not the main one.

To fix it, set a "cwd" option in the local instance to ensure the
relative file paths are resolved in the main instance based on the local
instance.
Comment 4 Carlos Soriano 2015-10-16 15:28:24 UTC
Attachment 313473 [details] pushed as af92c27 - application: specify cwd
Comment 5 Carlos Soriano 2015-10-16 15:50:07 UTC
pushed to 3.18 as well.
Comment 6 Carlos Soriano 2015-10-31 10:25:52 UTC
*** Bug 757179 has been marked as a duplicate of this bug. ***